# cplusplus_practice

./: .bashrc  README.md  constructors.cpp  encapsulation.cpp  files.cpp  notascpp.md  protected.cpp  study.md
Aula 1 - cin cout new delete/durante-aula/: area_circulo  area_circulo.cpp  pessoacriar.cpp
Aula 1 - cin cout new delete/estudo_em_casa/: circulo
Primeiro Trabalho/: excoin.cpp  excoin_method.cpp
Primeiro Trabalho/bank_sis/: CMakeLists.txt  proto_sis_bank.cpp
Primeiro Trabalho/bank_sis/include/: contaBancaria.h
Primeiro Trabalho/bank_sis/src/: contaBancaria.cpp  main.cpp
atividades/20230021617_POO-20242-E002/: README.md  dispositivo_industrial.h  escrever_log.cpp  main.cpp  sensor_app  sensor_temperatura.h  temperatura_status.txt  time.cpp  utils.h
aula1/durante-aula/: pessoa  pessoa.cpp
aula1/estudo_em_casa/: saida_numeros  saida_numeros.cpp
aula1_cin-cout-new-delete/durante-aula/: o que aprendemos na aula.md
aula1_cin-cout-new-delete/estudo_em_casa/: circulo.cpp
basic/: class.cpp  funcoverloading.cpp  functions.cpp  inheritance.cpp  methods.cpp  pointers.cpp  polymorphism.cpp  references.cpp
casa-practice/: alien  alien.cpp  ecossistema.cpp
excoin/: excoin.cpp
practice/exchange/: Makefile  README.md
practice/filehandling/: exercises.md  readtext  writetext
practice/oop/: bank  bank.cpp  car  car.cpp  classcircle  classcircle.cpp  date.cpp  employee  employee.cpp  (+6 more)
self-learning/: display_text  display_text.cpp  fix_mistakes_to_compile  fix_mistakes_to_compile.cpp  hello_world  hello_world.cpp  input  input.cpp  output  output.cpp
(+27 files in other folders)
